--- a/analysis/notebooks/Analyze_2_move_DPM.ipynb
+++ b/analysis/notebooks/Analyze_2_move_DPM.ipynb
@@ -22,13 +22,13 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/GU-DPM/EvolutionaryClassifier/blob/main/analysis/Analyze_2_move_DPM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/GU-DPM/EvolutionaryClassifier/blob/main/analysis/notebooks/Analyze_2_move_DPM.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Setup"
+        "# Setup Environment"
       ],
       "metadata": {
         "id": "IaVswDDrdFhi"
